#400 Move infinite scroll settings to the preferences page

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,7 +20,7 @@
         <ul class="dropdown-menu" role="menu">
           <%= navbar_item 'Boards', boards_users_path, class: 'collapse-item' %>
           <%= navbar_item 'Preferences', preferences_users_path, class: 'collapse-item' %>
-          <%= navbar_item 'Settings', settings_users_path %>
+          <%= navbar_item 'Account', settings_users_path %>
           <%= navbar_dropdown_divider %>
           <%= navbar_item 'Log out', destroy_user_session_path %>
         </ul>
