--- a/app/views/users/recommended_tags.html.erb
+++ b/app/views/users/recommended_tags.html.erb
@@ -15,29 +15,19 @@
       <thead>
         <tr>
           <th align="left" class="col-md-1">Name</th>
-          <th align="left" class="col-md-1">Image Count</th>
+          <th align="left" class="col-md-1">Co-occurrence Count</th>
           <th align="left" class="col-md-1">Order</th>
         </tr>
       </thead>
 
       <tbody>
-        <% unless @tags_result %>
-          <% @tags.each_with_index do |tag, count| %>
+        <% @tags.each_with_index do |tag, count| %>
           <tr>
             <td><%= link_to tag.name, { controller: 'images', action: 'search', query: "#{tag.name}" }, class: "tag" %></td>
-            <td><%= tag.images_count %></td>
+            <td><%= tag.cooccurrence_count %></td>
             <td><%= count %></td>
           </tr>
           <% end %>
-        <% else %>
-          <% @tags_result.each_with_index do |tag, count| %>
-          <tr>
-            <td><%= link_to tag.name, { controller: 'images', action: 'search', query: "#{tag.name}" }, class: "tag" %></td>
-            <td><%= tag.images_count %></td>
-            <td><%= count %></td>
-          </tr>
-          <% end %>
-        <% end %>
       </tbody>
       </table>
       <%# end %>
