--- a/app/views/users/_home_images.html.erb
+++ b/app/views/users/_home_images.html.erb
@@ -23,13 +23,15 @@
       <% end %>
 
       <!-- Add another anchor to the modal as it gets unclickable when thumbnail's height is too short -->
-      <%= link_to ({ controller: 'images', action: 'show', id: image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' }) do %>
-        <div class="title">
-          <%= image.title.to_s %>
-          <div class="time-string">
-            <%= "Posted at: #{get_jst_string(image.posted_at)}" %>
+      <% unless mobile_device? %>
+        <%= link_to ({ controller: 'images', action: 'show', id: image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' }) do %>
+          <div class="title">
+            <%= image.title.to_s %>
+            <div class="time-string">
+              <%= "Posted at: #{get_jst_string(image.posted_at)}" %>
+            </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
     </div>
 
