--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -44,13 +44,17 @@
         <% end %>
         <br />
       </div>
+
+    <% unless mobile_device? %>
       <div class="title">
-          <%= favored_image.title.to_s %>
-          <div class="time-string">
-            <%= "PA: #{get_jst_string(favored_image.posted_at)}" %>
-          </div>
+        <%= favored_image.title.to_s %>
+        <div class="time-string">
+          <%= "PA: #{get_jst_string(favored_image.posted_at)}" %>
         </div>
-    </div>
+      </div>
+    <% end %>
+
+
   <% end %>
   <div id="loader">
     <%= image_tag asset_path('round_loader_mini.gif')%>
