--- a/app/views/users/recommended_tags.html.erb
+++ b/app/views/users/recommended_tags.html.erb
@@ -3,14 +3,13 @@
 <div class="container-fluid controlls">
   <div class="row">
     <div class="col-md-12">
-      <h1>Tags</h1>
+      <h1>Co-occurred Tags</h1>
     </div>
   </div>
 
 
   <div class="row">
     <div class="col-md-12">
-      <%# bs_table_tag do %>
       <table class="table table-striped">
       <thead>
         <tr>
@@ -30,7 +29,6 @@
           <% end %>
       </tbody>
       </table>
-      <%# end %>
 
     </div>
   </div>
